<resources>
    <string name="app_name">智能访视</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="daiBan_title">------</string>
    <string name="save">保存</string>
    <string name="input">请输入</string>
    <string name="home_intelligent_visit">智能访视</string>
    <string name="home_image_recording">影像记录</string>
    <string name="home_direct">协同指挥</string>
    <string name="home_database">资料库</string>
    <string name="name">姓\u3000\u3000名：</string>
    <string name="name_hint">请输入</string>
    <string name="name_select">请选择</string>
    <string name="id_number">身份证号：</string>
    <string name="sex">性\u3000\u3000别：</string>
    <string name="birthday">出生日期：</string>
    <string name="age">年\u3000\u3000龄：</string>
    <string name="phone">联系电话：</string>
    <string name="diagnose_order">确诊顺序：</string>
    <string name="diagnose_source">确诊来源：</string>
    <string name="case_type">病例类型：</string>
    <string name="case_report_area">病例报告地区：</string>
    <string name="patients_belong">病人属于：</string>
    <string name="area">所在区县/街道：</string>
    <string name="now_address">现住详细地址：</string>
    <string name="place_area">住址所属辖区：</string>
    <string name="work_unit">工作单位：</string>
    <string name="staff">人员分类：</string>
    <string name="morbidity_date">流调发病日期：</string>
    <string name="clathria_morbidity_date">大网发病日期：</string>
    <string name="just_copy_date">就诊日期：</string>
    <string name="confirmed_date">确诊日期：</string>
    <string name="report_hospital">报告医院：</string>
    <string name="into_hospital">转入医院：</string>
    <string name="tohospital_date">入院日期：</string>
    <string name="clinic">临床严重程度：</string>
    <string name="vest">转归：</string>
    <string name="vest_date">转归日期：</string>
    <string name="chronic_disease">有无慢性病：</string>
    <string name="wbc">WBC(*109)：</string>
    <string name="symptom">症状和体征：</string>
    <string name="fever">发热：</string>
    <string name="is">是</string>
    <string name="no">否</string>
    <string name="animal_heat">体温：</string>
    <string name="t">℃</string>
    <string name="chill">寒战</string>
    <string name="hoose">干咳</string>
    <string name="cough">咳痰</string>
    <string name="rhinobyon">鼻塞</string>
    <string name="running_nose">流涕</string>
    <string name="pharyngalgia">咽痛</string>
    <string name="headache">头痛</string>
    <string name="weak">乏力</string>
    <string name="sore_muscle">肌肉酸痛</string>
    <string name="joint_sore">关节酸痛</string>
    <string name="anhelation">气促</string>
    <string name="dyspnea">呼吸困难</string>
    <string name="chest_distress">胸闷</string>
    <string name="stethalgia">胸痛</string>
    <string name="conjunctiva">结膜充血</string>
    <string name="sick">恶心</string>
    <string name="emesis">呕吐</string>
    <string name="diarrhea">腹泻</string>
    <string name="stomachache">腹痛</string>
    <string name="rest">其他：</string>
    <string name="contact_sum">密接总数：</string>
    <string name="medical_contact">医务密接：</string>
    <string name="view_of_contact">在观密接：</string>
    <string name="view_of_medical_contact">在观医务密接：</string>
    <string name="view_of_medical_no_contact">在观非医务密接：</string>
    <string name="onday">当日已解除：</string>
    <string name="add_relieve">累计解除：</string>
    <string name="add_medical_contact">累计解除医务密接：</string>
    <string name="onday_transfer">当日密接中转为确：</string>
    <string name="add_contact">累计密接中转为确：</string>
    <string name="provinces_contact">外省密接数：</string>
    <string name="family_contact">家庭密接人数：</string>
    <string name="infection_source">感染来源：</string>
    <string name="transport">交通工具：</string>
    <string name="reveal_history">可疑暴露史：</string>
    <string name="is_aggregation">是否聚集性：</string>
    <string name="aggregation_number">聚集编号：</string>
    <string name="aggregation_address">聚集地点：</string>
    <string name="aggregation_mode">聚集性方式：</string>
    <string name="is_famlily_member">是否家庭成员：</string>
    <string name="previous_ralationship">与上一代病例关系：</string>
    <string name="case_style">输入性/本地病例：</string>
    <string name="first_expose">初次暴露日期：</string>
    <string name="last_expose">末次暴露日期：</string>
    <string name="longest_period">最长潜伏期：</string>
    <string name="shortest_period">最短潜伏期：</string>
    <string name="medical_duration">发病就诊时长：</string>
    <string name="diagnosis_duration">发病确诊时长：</string>
    <string name="passage_duration">传代时长：</string>
    <string name="test1">咽拭子</string>
    <string name="test2">鼻拭子</string>
    <string name="test3">痰液</string>
    <string name="test4">气管分泌物</string>
    <string name="test5">气管吸取物</string>
    <string name="test6">肺泡灌洗液</string>
    <string name="test7">血标本</string>
    <string name="test8">粪便</string>
    <string name="test9">其他（填写标本名称）</string>
    <string name="test10">未采集（不填写采样时间和结果）</string>
    <string name="epidemic_disease_table">流行病学调查表</string>
    <string name="link_base_info">基本信息</string>
    <string name="link_diagnosis_course">发病就诊过程</string>
    <string name="link_osculation_contact">密接情况</string>
    <string name="link_epidemic_disease_history">流行病学史</string>
    <string name="link_epidemic_disease_history_hint">个人流行病学历史情况</string>
    <string name="link_detection_info">实验室检测信息</string>
    <string name="epidemic_disease_table_details">流行病学调查表详情</string>
    <string name="ichronic_disease_note">慢性病名称：</string>
    <string name="if_fever">是否发热：</string>
    <string name="body_temp">体温（℃）：</string>
    <string name="symptoms">症状：</string>
    <string name="symptoms_oth">其他症状名称：</string>
    <string name="infect_origin_sort">感染来源分类：</string>
    <string name="infect_city">感染来源省/市：</string>
    <string name="infect_orig_to">感染来源去向：</string>
    <string name="service_name">CardEmulation Sample</string>
    <string name="card_title">Sample Loyalty Card</string>
    <string name="words">字数：%d</string>
    <string name="text_transfer_pdz">传输模板文件</string>
    <string name="text_device_setting">设备设置</string>
    <string name="text_remove_template">删除模板文件</string>
    <string name="text_not_exit_template">模板不会退出。</string>
    <string name="unable_access">无法访问......</string>
    <string name="no_network_device">找不到网络打印机</string>
    <string name="setting_printer">基本设置</string>
    <string name="printer_title">打印机</string>
    <string name="printer_text">选择目标打印机</string>
    <string name="setting_label">设置</string>
    <string name="about_label">关于</string>
    <string name="netPrinterListTitle_label">网络打印机</string>
    <string name="progress_dialog_message_preparing_connection">准备连接......</string>
    <string name="progress_dialog_message_createData">创建数据</string>
    <string name="progress_dialog_message_sendingData">发送数据......</string>
    <string name="progress_dialog_message_sendingPrintingData">发送数据......</string>
    <string name="progress_dialog_message_startPrint">打印数据</string>
    <string name="progress_dialog_message_dataSent">数据已发送</string>
    <string name="progress_dialog_message_printed">打印完成</string>
    <string name="progress_dialog_message_close_connection">关闭连接</string>
    <string name="progress_dialog_message_set_paper">请设置纸张</string>
    <string name="progress_dialog_message_cooling_start">打印机冷却开始</string>
    <string name="progress_dialog_message_cooling_end">打印机冷却结束</string>
    <string name="progress_dialog_message_waiting_peel">等待剥离标签</string>
    <string name="progress_dialog_message_sending_template">文件传输</string>
    <string name="progress_dialog_message_getting_bluetooth_setting">获取蓝牙设置</string>
    <string name="progress_dialog_message_setting_bluetooth_setting">传输蓝牙设置</string>
    <string name="progress_dialog_message_removing_template">删除模板</string>
    <string name="progress_dialog_message_getting_template">获取模板列表</string>
    <string name="error_message_none">成功</string>
    <string name="error_message_runtime">发生运行时错误</string>
    <string name="printer_model_title">打印机型号</string>
    <string name="printer_model_value">选择打印机型号</string>
    <string name="error_message_weong_os">不支持Android操作系统</string>
    <string name="error_message_no_usb">找不到USB设备</string>
    <string name="port_title">端口</string>
    <string name="port_value">选择端口</string>
    <string name="address_title">IP地址</string>
    <string name="address_value">设置IP地址的数量</string>
    <string name="mac_address_title">MAC地址</string>
    <string name="mac_address_value">设置mac地址的数量</string>
    <string name="paper_size_title">纸张尺寸</string>
    <string name="paper_size_value">选择纸张尺寸</string>
    <string name="orientation_title">打印方向</string>
    <string name="orientation_value">选择打印方向</string>
    <string name="trim_tape_after_data_title">切零线</string>
    <string name="trim_tape_after_data_value">选择切割零线</string>
    <string name="tethering_title">圈养</string>
    <string name="tethering_value">选择网络共享</string>
    <string name="number_of_copies_title">复印数量</string>
    <string name="number_of_copies_value">设置份数</string>
    <string name="halftoning_title">半色调</string>
    <string name="halftoning_value">选择半色调方法</string>
    <string name="overwrite_title">覆盖文件</string>
    <string name="overwrite_value">选择覆盖模式</string>
    <string name="image_thresholding_title">简单二进制的阈值</string>
    <string name="image_thresholding_value">选择阈值</string>
    <string name="scale_value_title">比例值</string>
    <string name="scale_value_value">选择比例值</string>
    <string name="fit_to_page_title">适合页面</string>
    <string name="fit_to_page_value">选择是否适合页面</string>
    <string name="is_carbon_title">碳</string>
    <string name="is_carbon_value">选择碳</string>
    <string name="pj_density_title">PJ密度</string>
    <string name="pj_density_value">选择PJ密度</string>
    <string name="mode9_title">MODE9</string>
    <string name="mode9_value">选择Mode9</string>
    <string name="pj_speed_title">PJ速度</string>
    <string name="pj_speed_value">选择PJ速度</string>
    <string name="printer_case_title">打印机外壳</string>
    <string name="printer_case_value">选择打印机外壳</string>
    <string name="print_quality_title">打印质量</string>
    <string-array name="print_quality_value">
        <item>LOW_RESOLUTION</item>
        <item>NORMAL</item>
        <item>DOUBLE_SPEED</item>
        <item>HIGH_RESOLUTION</item>
    </string-array>
    <string name="is_skip_status_check_title">跳过状态检查</string>
    <string name="is_skip_status_check_value">选择跳过状态检查模式</string>
    <string name="check_print_end_title">检查打印结束</string>
    <string name="check_print_end_value">检查打印结束</string>
    <string name="feed_mode_title">进纸模式</string>
    <string name="feed_mode_value">选择如何进纸</string>
    <string name="pj_paper_kind_title">纸种</string>
    <string name="pj_paper_kind_value">选择纸种</string>
    <string name="align_title">对齐</string>
    <string name="align_value">选择对齐</string>
    <string name="paper_pos_title">论文位置</string>
    <string name="paper_pos_value">选择纸张位置</string>
    <string name="valign_title">VALIGN</string>
    <string name="valign_value">选择valign</string>
    <string name="left_margin_title">左边距</string>
    <string name="left_margin_value">设置左边距</string>
    <string name="top_margin_title">最高保证金</string>
    <string name="top_margin_value">设置上边距</string>
    <string name="custom_paper_width_title">自定义纸张宽度</string>
    <string name="custom_paper_width_value">设置自定义纸张的宽度</string>
    <string name="custom_paper_length_title">自定义纸张长度</string>
    <string name="custom_paper_length_value">设置自定义纸张的长度</string>
    <string name="custom_setting_title">自定义设置</string>
    <string name="custom_setting_value">选择自定义设置文件</string>
    <string name="custom_feed_title">进纸设置</string>
    <string name="custom_feed_value">设定喂纸长度</string>
    <string name="rj_density_title">密度</string>
    <string name="rj_density_value">选择密度</string>
    <string name="is_rotate180_title">旋转180</string>
    <string name="button_refresh">刷新</string>
    <string name="button_settings">设置</string>
    <string name="header_brother_printer">MTM-Printer - 兄弟打印机</string>
    <string name="button_print">打印</string>
    <string name="button_printer_settings">打印机设置</string>
</resources>