<?xml version="1.0" encoding="utf-8"?>
<!--第三部分密接情况-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chechtable_close_contact_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/shape_rd12_gray_square"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/info_textview"
            android:text="@string/contact_sum" />

        <EditText
            android:id="@+id/contact_sum_edit"
            style="@style/info_edittext" />
    </LinearLayout>

    <View style="@style/info_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/info_textview"
            android:text="@string/medical_contact" />

        <EditText
            android:id="@+id/medical_contact_edit"
            style="@style/info_edittext" />
    </LinearLayout>

    <View style="@style/info_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/info_textview"
            android:text="@string/view_of_medical_contact" />

        <EditText
            android:id="@+id/view_of_medical_contact_edit"
            style="@style/info_edittext" />
    </LinearLayout>

    <View style="@style/info_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/info_textview"
            android:text="@string/view_of_medical_no_contact" />

        <EditText
            android:id="@+id/view_of_medical_no_contact_edit"
            style="@style/info_edittext" />
    </LinearLayout>

    <View style="@style/info_line" />

    <LinearLayout
        android:id="@+id/baseinfo_hide_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/info_textview"
                android:text="@string/onday" />

            <EditText
                android:id="@+id/onday_edit"
                style="@style/info_edittext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/info_textview"
                android:text="@string/add_relieve" />

            <EditText
                android:id="@+id/add_relieve_edit"
                style="@style/info_edittext" />
        </LinearLayout>

        <View style="@style/info_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/info_textview"
                android:text="@string/add_medical_contact" />

            <EditText
                android:id="@+id/add_medical_contact_edit"
                style="@style/info_edittext" />
        </LinearLayout>

        <View style="@style/info_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/info_textview"
                android:text="@string/onday_transfer" />

            <EditText
                android:id="@+id/onday_transfer_edit"
                style="@style/info_edittext" />
        </LinearLayout>

        <View style="@style/info_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/info_textview"
                android:text="@string/add_contact" />

            <EditText
                android:id="@+id/add_contact_edit"
                style="@style/info_edittext" />
        </LinearLayout>

        <View style="@style/info_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/info_textview"
                android:text="@string/provinces_contact"
                android:textColor="@color/red"/>

            <EditText
                android:id="@+id/provinces_contact_edit"
                style="@style/info_edittext" />
        </LinearLayout>

        <View style="@style/info_line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/info_textview"
                android:text="@string/family_contact"
                android:textColor="@color/red"/>

            <EditText
                android:id="@+id/family_contact_edit"
                style="@style/info_edittext" />
        </LinearLayout>

        <View style="@style/info_line" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_open_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/third_open_iv"
            android:layout_marginTop="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/pull_down" />
    </LinearLayout>

</LinearLayout>
