<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:background="@drawable/printer_header_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.0dip"
            android:background="@drawable/icon_small" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3.0dip"
            android:layout_marginRight="5.0dip"
            android:shadowColor="#ff4a5461"
            android:shadowDx="0.0"
            android:shadowDy="-1.0"
            android:shadowRadius="1.0"
            android:singleLine="true"
            android:text="@string/header_brother_printer"
            android:textColor="#ffffffff"
            android:textSize="@dimen/content_title"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnPrinterSettings"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/button_printer_settings" />

        <Button
            android:id="@+id/btnPrint"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/button_print" />
    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>